# Calculator_MCP

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
calculator_mcp/: __init__.py  server.py
config/: claude_desktop_config.json
docs/: API.md
scripts/: release.sh  setup-dev.sh
src/: __init__.py
